--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,8 +8,10 @@ body {
     font-size: 30px;
     color: #4B4941 !important;
 }
-.navbar{
-    position: fixed;
+.nav-link{
+    font-family: 'Sriracha', cursive;
+    font-size: 20px;
+    color: #4B4941 !important;
 }
 .time{
     transition: 300ms ease;
@@ -50,9 +52,18 @@ hr{
     color: #4B4941;
     background-color: #4B4941;
 }
+hr.hro{
+    border: none;
+    height: 5px;
+    color: #4B4941;
+    background-color: #4B4941;
+    width: 50%;
+    margin-left: 0px;
+}
 .embedchannel{
     margin-top: 30px;
     text-align: center;
+    ;
 }
 .embedshop{
     margin-top: 50px;
@@ -177,3 +188,104 @@ p.subspan{
   .stream{
     margin-top: 130px;
   }
+
+  .card-list{
+    margin-top: 100px;
+  }
+
+  .event-list-judul{
+    margin-top: 150px;
+  }
+  .card-event {
+    text-decoration: none;
+    color: #2C2E41;
+    max-width: 300px;
+    width: 100%;
+    background: white;
+    position: relative;
+    border-radius: 10px;
+    box-shadow: 0 1px 3px rgba(44, 46, 65, .15);
+    transition: all .3s ease-in-out;
+    
+    header {
+      padding-bottom: 90%;
+      position: relative;
+      border-radius: 10px;
+      overflow: hidden;
+      background-image: url(https://source.unsplash.com/800x400/?food);
+      background-size: cover;
+      background-position: center;
+    }
+    
+    .content {
+      left: 0;
+      width: 100%;
+      background: #fff;
+      border-radius: 10px;
+      padding: 30px 30px 30px;
+      margin-top: -20px;
+      position: relative;
+      transition: all .3s ease-in-out;
+      
+      > * {
+        margin-bottom: 20px;
+        
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+      
+      h3 {
+        font-size: 1.6em;
+        font-weight: bold;
+        margin-bottom: 15px;
+      }
+    }
+    
+    .read-more {
+      display: inline-block;
+      text-transform: uppercase;
+      font-weight: bold;
+      font-size: .8em;
+      padding: 10px 20px;
+      background: #f1f1f1;
+      border-radius: 50px;
+      position: absolute;
+      bottom: 30px;
+      left: 30px;
+      z-index: 1;
+      opacity: 0;
+      transform: translateY(30px);
+      transition: all .3s ease-in-out;
+    }
+    
+    &:hover {
+        box-shadow: 0 4px 15px rgba(44, 46, 65, .15);
+      .content {
+        transform: translateY(-50%);
+      }
+      
+      .read-more {
+        opacity: 1;
+        transform: translateY(0);
+        }
+    }
+  }
+  @media (min-width: 992px) {
+
+    
+    
+    .nav-link{
+        margin-right: 30px;
+        
+    }
+
+    .nav-link:hover::after{
+        content: '';
+        display: block;
+        border-bottom: 3px solid #4B4941;
+        width: 50%;
+        margin: auto;
+        padding-bottom: 5px;
+        margin-bottom: -8px;
+    }
