--- a/src/css/style.css
+++ b/src/css/style.css
@@ -78,6 +78,10 @@ hr.footer{
     margin-top: 100px;
     text-align: center;
 }
+.footerrr{
+  margin-top: 250px;
+    text-align: center;
+}
 #return-to-top {
     position: fixed;
     bottom: 20px;
